@@ -20,6 +20,9 @@ Release 2.0.3-alpha - Unreleased
     YARN-82. Change the default local and log dirs to be based on
     hadoop.tmp.dir and yarn.log.dir. (Hemanth Yamijala via sseth)
 
+    YARN-53. Added the missing getGroups API to ResourceManager. (Bo Wang via
+    vinodkv)
+
   OPTIMIZATIONS
 
   BUG FIXES 
